# uwang-rest-auth

./: .env.example  .gitignore  Cargo.toml  Dockerfile  HELP.md  README.md  build.gradle.kts  dev.Dockerfile  docker-compose.yml  index.html  prod.Dockerfile  settings.gradle.kts  staging.Dockerfile  tes-sse.html
.github/: pull_request_template.md
.github/workflows/: build-dev.yaml  build-prod.yaml  build-staging.yaml
config/: checkstyle.xml  suppressed-checkstyle.xml
dockerfile/: dev.Dockerfile  prod.Dockerfile  staging.Dockerfile
email-template/: index.html  main.js  style.css
email-template/invitation-admin/: index.html  style.css
email-template/sign-up/: index.html  style.css
email-template/suspicious-activity/: index.html  style.css
email-template/welcome-registration/: index.html  style.css
migration/: Cargo.toml
migration/src/: entity.rs  lib.rs  m20220101_000001_create_table.rs  m20240222_024732_create_user_credential.rs  m20240222_025325_create_user_profile.rs  m20240222_025650_create_user_logs.rs  m20240222_025842_create_admin.rs  m20240222_030356_create_admin_roles.rs  m20240222_030858_create_post.rs
scripts/: pre-push-macos  pre-push-windows
src/: main.rs
src/common/: constant.rs  custom_error.rs  jwt.rs  mod.rs  otp_generator.rs  redis_ext.rs  response.rs  utils.rs
src/email-template/: index.html  main.js  style.css
src/entity/: admin.rs  admin_access.rs  admin_role.rs  attachment.rs  device.rs  group.rs  group_member.rs  hashtag.rs  mod.rs  notification.rs  post.rs  post_comment.rs  post_hashtag.rs  post_mention.rs  prelude.rs  report.rs  sea_orm_active_enums.rs  system_access.rs  threads.rs  threads_comment.rs  user_credential.rs  user_forgot_password.rs  user_log.rs  user_login.rs  user_notification.rs  user_profile.rs  user_push_token.rs  user_report.rs  user_verification.rs
src/models/: auth.rs  event.rs  mod.rs  user.rs  utils.rs
src/repositories/: auth.rs  mod.rs  user.rs
src/request_filter/: client_middleware.rs  jwt_middleware.rs  mod.rs
src/routes/: auth.rs  event_stream.rs  index.rs  mod.rs  (+1 more)
templates/: otp.hbs  sign-in-basic-otp.hbs  sign-up-basic-otp.hbs
(+508 files in other folders)
